Fixed logo image and navbar alignment issues

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -74,6 +74,7 @@ button {
   display: flex;
   margin: 0 auto;
   padding: 0 48px;
+  align-items: center;
 }
 
 .flexCol {
