--- a/components/store/navbar/navbar.module.scss
+++ b/components/store/navbar/navbar.module.scss
@@ -3,6 +3,7 @@
 .navbar {
   display: flex;
   position: fixed;
+  align-items: center;
   top: 0;
   background-color: white;
   flex-direction: column;
